--- a/index.html
+++ b/index.html
@@ -855,7 +855,7 @@
                 <li><a href="publications.html">Publications</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#experiences">Experiences</a></li>
-                <li><a href="https://hoder-zyf.github.io/assets/pdf/en-cv-zyf.pdf" target="_blank">CV</a></li>
+                <li><a href="pdf/en-cv-zyf.pdf" target="_blank">CV</a></li>
             </ul>
         </div>
     </nav>
@@ -873,8 +873,8 @@
 
                 <div class="resume-links">
                     <strong>📄 More about me:</strong>
-                    <a href="https://hoder-zyf.github.io/assets/pdf/en-cv-zyf.pdf" target="_blank">English Resume</a> |
-                    <a href="https://hoder-zyf.github.io/assets/pdf/cn-cv-zyf.pdf" target="_blank">中文简历</a>
+                    <a href="pdf/en-cv-zyf.pdf" target="_blank">English Resume</a> |
+                    <a href="pdf/cn-cv-zyf.pdf" target="_blank">中文简历</a>
                 </div>
             </div>
         </section>
