--- a/publications.html
+++ b/publications.html
@@ -370,7 +370,7 @@
                         <li><a href="index.html#news">News</a></li>
                         <li><a href="publications.html">Publications</a></li>
                         <li><a href="index.html#experiences">Experiences</a></li>
-                        <li><a href="https://hoder-zyf.github.io/assets/pdf/en-cv-zyf.pdf" target="_blank">CV</a></li>
+                        <li><a href="pdf/en-cv-zyf.pdf" target="_blank">CV</a></li>
                     </ul>
                 </nav>
             </div>
