--- a/index.html
+++ b/index.html
@@ -958,7 +958,7 @@
             <ul class="news-list" id="news-list">
                 <li class="news-item">
                     <span class="news-date">10/2025:</span>
-                    🏆 Pleased to receive the <strong>National Scholarship</strong> at Nanjing University.
+                    🏆 Receive the <strong>National Scholarship</strong> at Nanjing University.
                 </li>
                 <li class="news-item">
                     <span class="news-date">09/2025:</span>
