update two papers

--- a/index.html
+++ b/index.html
@@ -1040,6 +1040,28 @@
 
             <div class="publication">
                 <div class="pub-title">
+                    AI-Trader: Benchmarking Autonomous Agents in Real-Time Financial Markets
+                </div>
+                <div class="pub-authors">
+                    Tianyu Fan, Yuhao Yang, Yangqin Jiang, <strong>Yifei Zhang</strong>, Yuxuan Chen, Chao Huang, et al.
+                </div>
+                <div class="pub-award">
+                    🚀 <strong>Fully-automated and data-uncontaminated benchmark for LLM agents in finance</strong>
+                </div>
+                <div class="pub-venue">
+                    arXiv preprint 2025
+                </div>
+                <div class="pub-tldr">
+                    <strong>TL;DR:</strong> A comprehensive benchmark for evaluating <strong>autonomous trading agents</strong> in real-time financial markets across <strong>NASDAQ 100, SSE 50, and cryptocurrency markets</strong>, enabling fair comparison of AI trading strategies.
+                </div>
+                <div class="pub-links">
+                    <a href="https://arxiv.org/abs/2512.10971" target="_blank"><i class="fas fa-file-pdf"></i> Paper</a>
+                    <a href="https://github.com/HKUDS/AI-Trader" target="_blank"><i class="fab fa-github"></i> Code<span class="github-stars" data-repo="HKUDS/AI-Trader"><i class="fas fa-star"></i><span class="star-count">...</span></span></a>
+                </div>
+            </div>
+
+            <div class="publication">
+                <div class="pub-title">
                     TwinMarket: A Scalable Behavioral and Social Simulation for Financial Markets
                 </div>
                 <div class="pub-authors">
@@ -1079,30 +1101,6 @@
                 <div class="pub-links">
                     <a href="https://arxiv.org/abs/2410.14059" target="_blank"><i class="fas fa-file-pdf"></i> Paper</a>
                     <a href="https://github.com/TobyYang7/UCFE-Benchmark" target="_blank"><i class="fab fa-github"></i> Code<span class="github-stars" data-repo="TobyYang7/UCFE-Benchmark"><i class="fas fa-star"></i><span class="star-count">...</span></span></a>
-                </div>
-            </div>
-
-            <div class="publication">
-                <div class="pub-title">
-                    Shared Fortunes and Risks: Stock Price Spillover Effects of Corporate Ties — Evidence from the Chinese Social Media Platform "Xueqiu"
-                </div>
-                <div class="pub-authors">
-                    Honghai Yu, Yunmiao Zhang, Zhuo Chen, Chang Zeng, <strong>Yifei Zhang</strong>
-                </div>
-                <div class="pub-award">
-                    🎖️ <strong>Outstanding Paper Award</strong> (10/190)
-                </div>
-                <div class="pub-venue">
-                    The 7th Conference of the Chinese Society of Optimization, Overall Planning, and Economic Mathematics, 2025
-                </div>
-                <div class="pub-tldr">
-                    <strong>TL;DR:</strong> Investigates <strong>stock price spillover effects</strong> through <strong>corporate network ties on social media</strong>, revealing how social connections influence market dynamics and investor behavior.
-                </div>
-                <div class="pub-links">
-                    <a href="#" onclick="toggleAbstract('abstract-shared-fortunes'); return false;"><i class="fas fa-file-alt"></i> Abstract</a>
-                </div>
-                <div id="abstract-shared-fortunes" class="pub-abstract" style="display: none;">
-                    <strong>Abstract:</strong> This paper investigates the <strong>stock price spillover effects</strong> arising from <strong>corporate network ties on the Chinese social media platform "Xueqiu"</strong>. By constructing a comprehensive dataset of corporate relationships and stock price movements, we analyze how information and sentiment propagate through social networks and impact stock valuations. Our findings reveal significant spillover effects where connected firms experience correlated price movements, particularly during periods of high market volatility. We identify key mechanisms through which social media amplifies these effects, including information cascades, herding behavior, and investor attention. The results provide important insights into the role of social media in modern financial markets and have implications for portfolio management, risk assessment, and regulatory policy.
                 </div>
             </div>
 
